--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,8 +19,8 @@ layout:                                 default
 		<div class="row">
 			<div class="col-lg-8">
 				<ul class="list-inline d-flex justify-content-between py-3">
-					<li class="list-inline-item"><i class="ti-user mr-2"></i>Post by {{site.author.name}}</li>
-					<li class="list-inline-item"><i class="ti-calendar mr-2"></i>{{page.date | date: '%b %d, %Y'}}</li>
+					<li class="list-inline-item"><i class="ti-user" style="margin-right: 6px;"></i>Post by {{site.author.name}}</li>
+					<li class="list-inline-item"><i class="ti-calendar" style="margin-right: 6px;"></i>{{page.date | date: '%b %d, %Y'}}</li>
 				</ul>
 				{% if page.image %}
 				<img src="{{page.image | relative_url}}" alt="{{page.title}}" class="w-100 img-fluid mb-4">
