--- a/_sass/theme_parsa/components/_anchors.scss
+++ b/_sass/theme_parsa/components/_anchors.scss
@@ -2,14 +2,25 @@
 // Anchors
 //
 
-a {
-    color: #049377 !important;
-    font-weight: 600 !important;
-    text-decoration: none;
-    border-bottom: 1px dotted;
+a,
+a:hover,
+a:focus {
+  text-decoration: none;
 }
 
-a:hover {
-    color: #090606 !important;
-    font-weight: 600 !important;
+a,
+button,
+select {
+  cursor: pointer;
+  transition: .2s ease;
+}
+
+a:focus,
+button:focus,
+select:focus {
+  outline: 0;
+}
+
+a:hover, a.text-dark:hover {
+  color: #ff6f00 !important;
 }
