--- a/_sass/theme_parsa/components/_buttons.scss
+++ b/_sass/theme_parsa/components/_buttons.scss
@@ -2,23 +2,60 @@
 // Buttons
 //
 
-// Custom extra large button size
-.btn-xl {
-    padding: 1rem 1.75rem;
-    font-size: 1.25rem;
+.btn {
+  font-size: 15px;
+  font-family: "Open Sans", sans-serif;
+  text-transform: capitalize;
+  padding: 8px 20px;
+  border-radius: 0;
+  font-weight: 600;
+  border: 1px solid;
+  position: relative;
+  z-index: 1;
+  transition: .2s ease;
 }
 
-// Custom social buttons
-.btn-social {
-    border-radius: 100%;
-    display: inline-flex;
-    width: 3.25rem;
-    height: 3.25rem;
-    font-size: 1.25rem;
-    justify-content: center;
-    align-items: center;
+.btn:focus {
+  outline: 0;
+  box-shadow: none !important;
 }
 
-.btn.btn-light:hover {
-  color: #0f8a72 !important;
+.btn:active {
+  box-shadow: none;
+}
+
+.btn-primary {
+  background: #ff6f00;
+  color: #fff;
+  border: 0;
+}
+
+.btn-primary:active {
+  background: #ff6f00 !important;
+}
+
+.btn-primary:hover {
+  background: #ff8c33;
+}
+
+.btn-outline-light {
+  background: transparent;
+  color: #fff;
+}
+
+.btn-outline-light:active {
+  background: #fff !important;
+  color: #000000;
+  border-color: #fff;
+}
+
+.btn-outline-light:hover {
+  background: #fff !important;
+  color: #000000;
+  border-color: #fff;
+}
+
+.btn-transparent {
+  color: #ff6f00;
+  border: 0;
 }
