Updated SASS files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,12 +5,12 @@
     <a class="navbar-brand" href="{{site.baseurl | absolute_url}}"><img class="img-fluid" src="{{site.logo | relative_url}}" alt="{{site.title}}"></a>
     {% endif %}
 
-    <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
-      aria-controls="navogation" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation"
+      aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse text-center" id="navogation">
+    <div class="collapse navbar-collapse text-center" id="navigation">
       <ul class="navbar-nav ml-auto">
         {% for menu-item in site.menu %}
         {% if menu-item.submenu %}
@@ -33,10 +33,10 @@
         {% endfor %}
       </ul>
 
-      <form class="form-inline position-relative ml-lg-4" action="/search.html" method="get">
+      <!-- form class="form-inline position-relative ml-lg-4" action="/search.html" method="get">
         <input class="form-control px-0 w-100" type="search" id="search-box" name="query" placeholder="Search">
         <button class="search-icon" type="submit"><i class="ti-search text-dark"></i></button>
-      </form>
+      </form -->
 
     </div>
 
