--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,14 +1,14 @@
 <div class="col-lg-4">
 
-  <div class="widget search-box">
+  <!-- div class="widget search-box">
     <form action="/search.html" method="get">
       <i class="ti-search"></i>
       <input type="search" id="search-box" class="form-control border-0 pl-5" name="query" placeholder="  Search">
     </form>
-  </div>
+  </div -->
 
   <div class="widget">
-    <h6 class="mb-4">LATEST POST</h6>
+    <h6 class="mt-5 mb-4">LATEST POST</h6>
     {% for post in site.posts limit:3 %}
     <div class="media mb-4">
       <div class="post-thumb-sm mr-3">
@@ -25,8 +25,8 @@
     {% endfor %}
   </div>
 
-  <div class="widget">
-    <h6 class="mb-4">CATEGORIES</h6>
+  <div class="widget mb-5">
+    <h6 class="mt-5 mb-4">CATEGORIES</h6>
     <ul class="list-inline tag-list">
       {% for category in site.categories %}
       <li class="list-inline-item m-1"><a href="{{ 'category/' | relative_url }}{{ category | first | slugify }}">{{ category | first }}</a></li>
