--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,7 @@
 <head>
 
+  <!-- META tags -->
+  <!-- ------------------------------------------------------------------------- -->
   <meta charset="utf-8">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
@@ -9,16 +11,19 @@
   <!-- theme meta -->
   <meta name="theme-name" content="parsa-jekyll" />
 
-  <!-- ** Plugins Needed for the Project ** -->
+  <!-- Plugin CSS needed for the project -->
+  <!-- ------------------------------------------------------------------------- -->
+
   <!-- Bootstrap -->
   <!-- link rel="stylesheet" href="{{ site.baseurl }}/assets/plugins/bootstrap/bootstrap.min.css" -->
+
   <!-- slick slider -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/plugins/slick/slick.css">
+
   <!-- themefy-icon -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/plugins/themify-icons/themify-icons.css">
 
   <!-- Main Stylesheet -->
-  <!-- link href="{{ site.baseurl }}/assets/css/style.css" rel="stylesheet" -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/parsa/bootstrap.css">
 
   <!--Favicon-->
