--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,29 +29,39 @@
 
   {% include footer.html %}
 
+  <!-- Plugin JS needed for the project -->
+  <!-- ------------------------------------------------------------------------- -->
+
   <!-- jQuery -->
   <script src="{{ site.baseurl }}/assets/plugins/jQuery/jquery.min.js"></script>
+
   <!-- Bootstrap JS -->
   <script src="{{ site.baseurl }}/assets/plugins/bootstrap/bootstrap.min.js"></script>
+
   <!-- slick slider -->
   <script src="{{ site.baseurl }}/assets/plugins/slick/slick.min.js"></script>
+
   <!-- masonry -->
   <script src="{{ site.baseurl }}/assets/plugins/masonry/masonry.js"></script>
+
   <!-- instafeed -->
   <script src="{{ site.baseurl }}/assets/plugins/instafeed/instafeed.min.js"></script>
-  <!-- smooth scroll -->
-  <!-- script src="{{ site.baseurl }}/assets/plugins/smooth-scroll/smooth-scroll.js"></script -->
+
   <!-- headroom -->
   <script src="{{ site.baseurl }}/assets/plugins/headroom/headroom.js"></script>
+
   <!-- reading time -->
   <script src="{{ site.baseurl }}/assets/plugins/reading-time/readingTime.min.js"></script>
+
   <!-- lunr.js -->
   <script src="{{ site.baseurl }}/assets/plugins/search/lunr.min.js"></script>
+
   <!-- search -->
   <script src="{{ site.baseurl }}/assets/plugins/search/search.js"></script>
 
-  <!-- Main Script -->
-  <script src="{{ site.baseurl }}/assets/js/script.js"></script>
+  <!-- Main JS Script -->
+  <!-- ------------------------------------------------------------------------- -->
+  <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 </body>
 
 </html>
