--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,11 @@
           <h6>Follow</h6>
           <ul class="list-inline d-inline-block">
             {% for social in site.social %}
-            <li class="list-inline-item"><a href="{{ social.link }}" class="text-dark"><i class="{{ social.icon }}"></i></a></li>
+            <li class="list-inline-item">
+              <a href="{{ social.link }}" class="text-dark" aria-label="Social Media">
+                <i class="{{ social.icon }}"></i>
+              </a>
+            </li>
             {% endfor %}
           </ul>
         </div>
