--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,12 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
   <!-- mobile responsive meta -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <!-- meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- theme meta -->
   <meta name="theme-name" content="parsa-jekyll" />
+  <meta name="description" content="Parsa is an expedite, cozy, gorgeous responsive personal blog template. It’s crafted with well-planned attention for a personal blog site."  />
 
   <!-- Plugin CSS needed for the project -->
   <!-- ------------------------------------------------------------------------- -->
