--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,18 +8,18 @@
   </div -->
 
   <div class="widget">
-    <h6 class="mt-5 mb-4">LATEST POST</h6>
+    <h6 class="mt-2 mb-4">LATEST POST</h6>
     {% for post in site.posts limit:3 %}
     <div class="media mb-4">
       <div class="post-thumb-sm mr-3">
         <img class="img-fluid" src="{{post.image | relative_url }}" alt="{{ post.title }}">
       </div>
       <div class="media-body">
-        <ul class="list-inline d-flex justify-content-between mb-2">
+        <ul class="list-inline d-flex ml-2 mb-1">
           <li class="list-inline-item">Post By {{site.author.name | split: ' ' | first}}</li>
-          <li class="list-inline-item">{{post.date | date: "%B %-d, %Y"}}</li>
+          <li class="list-inline-item">&nbsp;&nbsp;&middot;&nbsp;{{post.date | date: "%B %-d, %Y"}}</li>
         </ul>
-        <h6><a class="text-dark" href="{{ post.url }}">{{ post.title }}</a></h6>
+        <h6 class="ml-2 mb-5"><a class="text-dark" href="{{ post.url }}">{{ post.title }}</a></h6>
       </div>
     </div>
     {% endfor %}
