--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout:                                 default
 ---
 
 <!-- page-title -->
@@ -8,6 +8,7 @@ layout: default
     <div class="row">
       <div class="col-lg-12">
         <h4>{{ page.title }}</h4>
+        <h6>{{ page.tagline }}</h6>
       </div>
     </div>
   </div>
@@ -29,7 +30,7 @@ layout: default
               {% endfor %}
               <h4 class="title-border"><a class="text-dark" href="{{ post.url | relative_url }}">{{post.title}}</a></h4>
               <p>{{ post.content | strip_html | truncatewords: 35 }}</p>
-              <a href="{{ post.url | relative_url }}" class="btn btn-transparent">read more</a>
+              <a href="{{ post.url | relative_url }}" class="btn btn-transparent mb-4">read &nbsp;&nbsp;&middot;&nbsp;{{post.tagline}}</a>
             </article>
           </div>
           {% endfor %}
