--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,12 @@ layout:                                 default
 ---
 
 <!-- page-title -->
-<section class="section bg-secondary">
+<section class="section bg-secondary mb-5">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
 				<h4>{{ page.title | escape }}</h4>
+        <h6>{{ page.tagline }}</h6>
 			</div>
 		</div>
 	</div>
@@ -18,9 +19,9 @@ layout:                                 default
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-8">
-				<ul class="list-inline d-flex justify-content-between py-3">
-					<li class="list-inline-item"><i class="ti-user" style="margin-right: 6px;"></i>Post by {{site.author.name}}</li>
-					<li class="list-inline-item"><i class="ti-calendar" style="margin-right: 6px;"></i>{{page.date | date: '%b %d, %Y'}}</li>
+				<ul class="list-inline d-flex py-3">
+					<li class="list-inline-item"><i class="ti-user" style="margin-right: 8px;"></i>Post by {{site.author.name}}&nbsp;&nbsp;&middot;&nbsp;</li>
+					<li class="list-inline-item"><i class="ti-calendar" style="margin-right: 8px;"></i>{{page.date | date: '%b %d, %Y'}}</li>
 				</ul>
 				{% if page.image %}
 				<img src="{{page.image | relative_url}}" alt="{{page.title}}" class="w-100 img-fluid mb-4">
