Added MasterHeader|ScrollTop. Reorg of include files (static|template)

--- a/_layouts/_unused/about.html
+++ b/_layouts/_unused/about.html
@@ -2,7 +2,7 @@
 layout:                                 default
 ---
 
-{% include templates/masthead.html %}
+{% include static/masthead.html %}
 
 <!-- page-content -->
 <section class="section">
@@ -20,9 +20,4 @@ layout:                                 default
   </div>
 </section>
 
-{% include templates/instagram.html %}
-
-<!-- Scroll up button -->
-<a href="" class="scrollup" aria-label="Scroll Up">
-  <img src="/assets/images/up.svg" alt="scroll-up">
-</a>
+{% include instagram.html %}
