--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -38,7 +38,7 @@ layout:                                 default
       </div>
 
       <!-- /blog post -->
-      {% include sidebar.html %}
+      {% include templates/sidebar.html %}
 
       </div>
     </div>
