--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,10 +30,15 @@ layout:                                 default
 					{{ content }}
 				</div>
 				{% if site.disqus-identifier %}
-				{% include disqus-comments.html %}
+				{% include static/disqus-comments.html %}
 				{% endif %}
 			</div>
-			{% include sidebar.html %}
+			{% include templates/sidebar.html %}
 		</div>
 	</div>
 </section>
+
+<!-- Scroll up button -->
+<a href="" class="scrollup" aria-label="Scroll Up">
+  <img src="/assets/images/up.svg" alt="scroll-up">
+</a>
