--- a/_sass/_theme_parsa.scss
+++ b/_sass/_theme_parsa.scss
@@ -62,5 +62,5 @@ $theme: "Parsa" !default;
 // Theme CSS sections
 // -----------------------------------------------------------------------------
 // @import "./theme_parsa/sections/footer.scss";
-// @import "./theme_parsa/sections/masthead.scss";
+@import "./theme_parsa/sections/masthead.scss";
 // @import "./theme_parsa/sections/portfolio.scss";
