--- a/_layouts/_unused/page.1.html
+++ b/_layouts/_unused/page.1.html
@@ -2,7 +2,17 @@
 layout:                                 default
 ---
 
-{% include templates/masthead.html %}
+<!-- page-title -->
+<section class="section bg-secondary">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<h4>{{ page.title | escape }}</h4>
+        <h6>{{ page.tagline }}</h6>
+			</div>
+		</div>
+	</div>
+</section>
 
 <!-- page-content -->
 <section class="section">
@@ -20,9 +30,4 @@ layout:                                 default
   </div>
 </section>
 
-{% include templates/instagram.html %}
-
-<!-- Scroll up button -->
-<a href="" class="scrollup" aria-label="Scroll Up">
-  <img src="/assets/images/up.svg" alt="scroll-up">
-</a>
+{% include instagram.html %}
