--- a/_sass/theme_parsa/_styles.scss
+++ b/_sass/theme_parsa/_styles.scss
@@ -2,6 +2,23 @@
 // Styles
 //
 
+
+.scrollup {
+    width: 60px;
+    height: 60px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    background-color: #f3955e;
+    text-align: center;
+    line-height: 60px;
+    padding: 10px;
+    color: #fff;
+    z-index: 100;
+    display: none;
+    border-radius: 50%;
+}
+
 /*  typography */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Playfair+Display:400,700");
 @font-face {
@@ -92,13 +109,17 @@ img {
 
 
 .section {
+  padding-top: 20px;
+  padding-bottom: 60px;
+}
+
+.section-lg {
   padding-top: 90px;
   padding-bottom: 90px;
 }
-
 .section-sm {
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 10px;
+  padding-bottom: 30px;
 }
 
 .section-title {
