Modified HTML 404 error page

--- a/_sass/theme_parsa/components/_overlay.scss
+++ b/_sass/theme_parsa/components/_overlay.scss
@@ -27,9 +27,9 @@
   display: unset !important;
 }
 
-.mb-10 {
-  margin-bottom: 10px !important;
-}
+// .mb-10 {
+//   margin-bottom: 10px !important;
+// }
 
 .mb-20 {
   margin-bottom: 20px !important;
