--- a/_includes/templates/masthead.html
+++ b/_includes/templates/masthead.html
@@ -9,10 +9,10 @@
 
         <span class="font-secondary text-dark mr-3 mr-sm-5">Follow</span>
         <ul class="list-inline d-inline-block mb-5">
-          <li class="list-inline-item mx-3"><a href="#" class="text-dark"><i class="ti-facebook"></i></a></li>
-          <li class="list-inline-item mx-3"><a href="#" class="text-dark"><i class="ti-twitter-alt"></i></a></li>
-          <li class="list-inline-item mx-3"><a href="#" class="text-dark"><i class="ti-linkedin"></i></a></li>
-          <li class="list-inline-item mx-3"><a href="#" class="text-dark"><i class="ti-github"></i></a></li>
+          <li class="list-inline-item mx-3"><a href="#" class="text-dark" alt="Social Media" aria-label="Social Media"><i class="ti-facebook"></i></a></li>
+          <li class="list-inline-item mx-3"><a href="#" class="text-dark" alt="Social Media" aria-label="Social Media"><i class="ti-twitter-alt"></i></a></li>
+          <li class="list-inline-item mx-3"><a href="#" class="text-dark" alt="Social Media" aria-label="Social Media"><i class="ti-linkedin"></i></a></li>
+          <li class="list-inline-item mx-3"><a href="#" class="text-dark" alt="Social Media" aria-label="Social Media"><i class="ti-github"></i></a></li>
         </ul>
       </div>
       <div class="col-lg-6 text-right">
