Latest files of version 2023.0.0

--- a/_includes/static/disqus-comments.html
+++ b/_includes/static/disqus-comments.html
@@ -1,4 +1,4 @@
-<!-- disqus-comments -->
+<!-- Disqus comments -->
 <div class="comments" style="padding: 1rem 0">
 
   <div id="disqus_thread" class="comments__article"></div>
@@ -15,3 +15,4 @@
   </noscript>
 
 </div>
+<!-- /Disqus comments -->
