--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,7 +2,7 @@
 layout:                                 default
 ---
 
-<!-- page-title -->
+<!-- Page title -->
 <section class="section bg-secondary">
   <div class="container">
     <div class="row">
@@ -13,8 +13,9 @@ layout:                                 default
     </div>
   </div>
 </section>
+<!-- /Page title -->
 
-<!-- category post -->
+<!-- Post by category -->
 <section>
   <div class="container">
     <div class="row">
@@ -37,9 +38,16 @@ layout:                                 default
         </div>
       </div>
 
-      <!-- /blog post -->
+      <!--Sidebar -->
       {% include templates/sidebar.html %}
 
       </div>
     </div>
 </section>
+<!-- /Post by category -->
+
+<!-- Scroll top button -->
+<a href="" class="scrollup" aria-label="Scroll Up">
+  <img src="/assets/images/up.svg" alt="scroll-up">
+</a>
+<!-- /Scroll top button -->
