--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -18,7 +18,8 @@ layout:                                 raw
   </div>
 </section>
 
-<!-- Scroll up button -->
+<!-- Scroll top button -->
 <a href="" class="scrollup" aria-label="Scroll Up">
   <img src="/assets/images/up.svg" alt="scroll-up">
 </a>
+<!-- /Scroll top button -->
