--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout:                                 default
 
 {% include templates/masthead.html %}
 
-<!-- page-content -->
+<!-- Page-contents -->
 <section class="section">
   <div class="container">
   	<div class="row">
@@ -19,10 +19,12 @@ layout:                                 default
   	</div>
   </div>
 </section>
+<!-- /Page-contents -->
 
 {% include templates/instagram.html %}
 
-<!-- Scroll up button -->
+<!-- Scroll top button -->
 <a href="" class="scrollup" aria-label="Scroll Up">
   <img src="/assets/images/up.svg" alt="scroll-up">
 </a>
+<!-- /Scroll top button -->
