--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout:                                 default
 ---
 
-<!-- page-title -->
+<!-- Page-title -->
 <section class="section bg-secondary mb-5">
 	<div class="container">
 		<div class="row">
@@ -13,8 +13,9 @@ layout:                                 default
 		</div>
 	</div>
 </section>
+<!-- /Page-title -->
 
-<!-- blog single -->
+<!-- Blog post -->
 <section>
 	<div class="container">
 		<div class="row">
@@ -37,8 +38,10 @@ layout:                                 default
 		</div>
 	</div>
 </section>
+<!-- Blog post -->
 
-<!-- Scroll up button -->
+<!-- Scroll top button -->
 <a href="" class="scrollup" aria-label="Scroll Up">
   <img src="/assets/images/up.svg" alt="scroll-up">
 </a>
+<!-- /Scroll top button -->
