--- a/_includes/templates/instagram.html
+++ b/_includes/templates/instagram.html
@@ -1,6 +1,6 @@
 {% if site.instafeed == true %}
 
-<!-- instagram -->
+<!-- Instagram -->
 <section>
   <div class="container-fluid px-0">
     <div class="row no-gutters instagram-slider" id="instafeed" data-userId="{{site.userID}}"
