--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Head section -->
 {% include static/head.html %}
 
 <body>
@@ -9,7 +10,7 @@
   {% endif %}
 
   {% if site.preloader == true %}
-  <!-- preloader -->
+  <!-- Preloader -->
   <div class="preloader">
     <div class="loader">
       <span class="dot"></span>
@@ -20,24 +21,27 @@
       </div>
     </div>
   </div>
-  <!-- /preloader -->
+  <!-- /Preloader -->
   {% endif %}
 
-
+  <!-- Dividers -->
   <div class="dividers">
     <div class="divider"></div>
     <div class="divider"></div>
     <div class="divider"></div>
     <div class="divider"></div>
   </div>
+  <!-- /Dividers -->
 
-  {% include templates/header.html %}
+  <!-- Navigation bar -->
+  {% include templates/navigation.html %}
 
   {{ content }}
 
+  <!-- Footer -->
   {% include templates/footer.html %}
 
-  <!-- Plugin JS needed for the template -->
+  <!-- JS needed for the template -->
 
   <!-- jQuery -->
   <script src="{{ site.baseurl }}/assets/plugins/jQuery/jquery.min.js"></script>
@@ -66,7 +70,7 @@
   <!-- Search -->
   <script src="{{ site.baseurl }}/assets/plugins/search/search.js"></script>
 
-  <!-- Main JS Script -->
+  <!-- Main JS -->
   <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 
 </body>
