Added portfolio panel. Adjusted sass sources|site config

--- a/_includes/templates/footer.html
+++ b/_includes/templates/footer.html
@@ -36,7 +36,7 @@
           <ul class="list-inline d-inline-block">
             {% for social in site.social %}
             <li class="list-inline-item">
-              <a href="{{ social.link }}" class="text-dark" alt="Social Media" aria-label="Social Media">
+              <a href="{{ social.link }}" class="text-dark" target="blank" rel="noopener" alt="Social Media" aria-label="Social Media">
                 <i class="{{ social.icon }}"></i>
               </a>
             </li>
