--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -8,7 +8,7 @@ layout:                                 default
     <div class="row">
       <div class="col-lg-12">
         <h4>{{ page.title }}</h4>
-        <h6>{{ page.tagline }}</h6>
+        <h6>Category</h6>
       </div>
     </div>
   </div>
