--- a/_sass/theme_parsa/_styles.scss
+++ b/_sass/theme_parsa/_styles.scss
@@ -220,7 +220,7 @@ img {
   content: "";
   height: 2px;
   width: 300px;
-  left: -45px;
+//  left: -45px;
   bottom: -50px;
   background: #ababab;
 }
