Reorg of the images folder (assets)

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -48,6 +48,6 @@ layout:                                 default
 
 <!-- Scroll top button -->
 <a href="" class="scrollup" aria-label="Scroll Up">
-  <img src="/assets/images/up.svg" alt="scroll-up">
+  <img src="/assets/images/parsa/icons/up.svg" alt="scroll-up">
 </a>
 <!-- /Scroll top button -->
