--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -20,6 +20,6 @@ layout:                                 raw
 
 <!-- Scroll top button -->
 <a href="" class="scrollup" aria-label="Scroll Up">
-  <img src="/assets/images/up.svg" alt="scroll-up">
+  <img src="/assets/images/parsa/icons/up.svg" alt="scroll-up">
 </a>
 <!-- /Scroll top button -->
